[metadata]
name = interloper
version = 0.1.2
author = Adam Sherwood
author_email = theherk@gmail.com
description = Tool to run ecs execute command in lambda.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/theherk/interloper
project_urls =
    Bug Tracker = https://github.com/theherk/interloper/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    boto3
    websocket-client
py_modules = interloper
python_requires = >=3.7
